[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/GameUI/Menus/SubMenus/HowToPlaySubMenu/resources/how_to_play_0.ogv" type="VideoStream" id=1]
[ext_resource path="res://GameUI/Menus/SubMenus/HowToPlaySubMenu/how_to_play_sub_menu.gd" type="Script" id=2]
[ext_resource path="res://GameUI/Menus/SubMenus/sub_menu_background_panel.gd" type="Script" id=3]
[ext_resource path="res://GameUI/Menus/SubMenus/resources/sub_menu_background_panel_stylebox.tres" type="StyleBox" id=4]
[ext_resource path="res://GameUI/Menus/SubMenus/resources/sub_menu_backdrop_stylebox.tres" type="StyleBox" id=5]
[ext_resource path="res://GameUI/fonts/main_font_20.tres" type="DynamicFont" id=6]

[node name="HowToPlaySubMenu" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 1000, 600 )
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
focus_mode = 2
custom_styles/panel = ExtResource( 5 )
script = ExtResource( 2 )

[node name="BackgroundPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -335.0
margin_right = 400.0
margin_bottom = 295.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 800, 630 )
custom_styles/panel = ExtResource( 4 )
script = ExtResource( 3 )

[node name="MenuContainer" type="VBoxContainer" parent="BackgroundPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 10
alignment = 1

[node name="VideoPlayer" type="VideoPlayer" parent="BackgroundPanel/MenuContainer"]
margin_right = 800.0
margin_bottom = 450.0
rect_min_size = Vector2( 800, 450 )
size_flags_horizontal = 0
size_flags_vertical = 0
stream = ExtResource( 1 )
bus = "Sound"

[node name="CenterContainer" type="CenterContainer" parent="BackgroundPanel/MenuContainer"]
margin_top = 460.0
margin_right = 800.0
margin_bottom = 630.0
rect_min_size = Vector2( 800, 170 )

[node name="TextLabel" type="RichTextLabel" parent="BackgroundPanel/MenuContainer/CenterContainer"]
margin_top = 72.0
margin_right = 800.0
margin_bottom = 98.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 800, 0 )
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/mono_font = ExtResource( 6 )
custom_fonts/bold_italics_font = ExtResource( 6 )
custom_fonts/italics_font = ExtResource( 6 )
custom_fonts/bold_font = ExtResource( 6 )
custom_fonts/normal_font = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "[center]TEXT HERE[/center]"
text = "TEXT HERE"
fit_content_height = true
scroll_active = false
